--- a/PayBokApp/src/app/components/card-menu/card-menu.component.html
+++ b/PayBokApp/src/app/components/card-menu/card-menu.component.html
@@ -1,32 +1,40 @@
 <div class="menuCard">
-    <mat-grid-list cols="4">
-        <mat-grid-tile colspan="1">
-            <span style="font-size: 25px;">$ ***</span><mat-icon style="padding-left: 6px;">visibility_off</mat-icon>
-        </mat-grid-tile>
-        <mat-grid-tile colspan="1"></mat-grid-tile>
-        <mat-grid-tile colspan="2">
+    <mat-grid-list cols="4" rowHeight="70px">
+        <mat-grid-tile colspan="4" rowspan="1">
+            <span style="font-size: 25px; padding-right: 35%;">$ ***
+                <mat-icon style="padding-left: 6px;">visibility_off</mat-icon>
+            </span>
             <div class="price">
                 <span style="padding-top: 5px; color: green;">▲ 59,2%</span>
             </div>
             <mat-icon style="padding-left: 10px;">chevron_right</mat-icon>
         </mat-grid-tile>
-        <mat-grid-tile colspan="1">
+        <mat-grid-tile colspan="4">
             <button mat-stroked-button color="primary" class="button">
                 Ingresar dinero
             </button>
-        </mat-grid-tile>
-        <mat-grid-tile colspan="1">
             <button mat-stroked-button color="primary" class="button">Transferir dinero</button>
-        </mat-grid-tile>
-        <mat-grid-tile colspan="1">
             <button mat-stroked-button color="primary" class="button">Sacar efectivo</button>
-        </mat-grid-tile>
-        <mat-grid-tile colspan="1">
             <button mat-stroked-button color="primary" class="button">Mercado Crédito</button>
         </mat-grid-tile>
-        <mat-grid-tile colspan="4">
             
-        </mat-grid-tile>
     </mat-grid-list>
+    <div class="cards">
+        <div class="card1">
+            <span class="cardTextNumber">4</span>
+        </div>
+        <div class="card2">
+            <span class="cardTextNumber">7</span>
+        </div>
+        <div class="card3">
+            <span class="cardTextNumber">9</span>
+        </div>
+        <div class="card4">
+            <img src="./../../../assets/mastercard_old_payment_method_icon_142751.png" alt="">
+        </div>
+        <div class="endCard">
+            <span>+ 4<mat-icon>chevron_right</mat-icon></span>
+        </div>
+    </div>
 
 </div>
