--- a/PayBokApp/src/app/components/bills/bills.component.html
+++ b/PayBokApp/src/app/components/bills/bills.component.html
@@ -1,1 +1,44 @@
-<p>bills works!</p>
+<div class="billsBox">
+    <mat-card class="example-card">
+        <mat-card-title style="font-size: 16px;">Tus gastos</mat-card-title>
+        <mat-card-subtitle>
+            Conocé las categorías de las operaciones realizadas con dinero disponible.
+        </mat-card-subtitle>
+        <mat-divider inset></mat-divider>
+        <mat-card-content>
+            <div id="chart">
+                <apx-chart
+                  [colors]="[
+                    '#f09819',
+                    '#764ba2',
+                    '#66a6ff',
+                    '#2af598',
+                    '#fa709a'
+                  ]"
+                  [series]="[444,55,13,43,22]"
+                  [chart]="{type: 'donut'}"
+                  [labels]="chartOptions.labels"
+                  [responsive]="
+                    [{
+                        breakpoint: 480,
+                        options: {
+                            chart: {
+                                width: 340
+                            },
+                            legend: {
+                                position: 'bottom'
+                            }
+                        }
+                    }]
+                  "
+                ></apx-chart>
+              </div>
+        </mat-card-content>
+        <mat-divider inset></mat-divider>
+        <mat-card-actions class="category">
+          <button mat-button>ir a gastos por categoría
+            <mat-icon style="padding-left: 10px;">chevron_right</mat-icon>
+          </button>
+        </mat-card-actions>
+      </mat-card>
+</div>
