--- a/PayBokApp/src/app/components/card-menu/card-menu.component.css
+++ b/PayBokApp/src/app/components/card-menu/card-menu.component.css
@@ -1,6 +1,6 @@
 .menuCard {
     width: 95%;
-    height: 250px;
+    height: 230px;
     background-color: white;
     box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
@@ -16,11 +16,74 @@
 }
 
 .button {
-    margin-left: 3%;
-    margin-right: 3%;
+    margin-left: 1.5%;
+    margin-right: 1.5%;
     height: fit-content;
     white-space: initial;
     line-height: 20px;
     padding-top: 5px;
     padding-bottom: 5px;
+}
+
+.cards {
+    height: 60px;
+    margin-left: 4%;
+    margin-right: 4%;
+    border-radius: 10px;
+    padding-top: 10px;
+}
+
+.card1 {
+    position: absolute;
+    height: 60px;
+    width: 76%;
+    border-radius: 10px;
+    background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+}
+.card2 {
+    position: absolute;
+    height: 60px;
+    width: 70%;
+    border-radius: 10px;
+    background-image: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
+}
+.card3 {
+    position: absolute;
+    height: 60px;
+    width: 65%;
+    border-radius: 10px;
+    background-image: linear-gradient(180deg, #2af598 0%, #009efd 100%);
+}
+.card4 {
+    position: absolute;
+    height: 60px;
+    width: 60%;
+    border-radius: 10px;
+    background-image: linear-gradient(120deg, #89f7fe 0%, #66a6ff 100%);
+}
+.card4 img {
+    height: 35px;
+    width: auto;
+    padding-top: 5%;
+    padding-left: 2%;
+}
+.cardTextNumber {
+    color: white;
+    padding-right: 3.5%;
+    align-items: center;
+    display: flex;
+    height: 57px;
+    justify-content: end;
+}
+.endCard {
+    height: 60px;
+    width: 15%;
+    position: absolute;
+    padding-left: 76%;
+}
+.endCard span {
+    align-items: center;
+    display: flex;
+    height: 57px;
+    padding-left: 10px;
 }
