--- a/PayBokApp/src/styles.css
+++ b/PayBokApp/src/styles.css
@@ -2,6 +2,7 @@
 
 html, body {
     height: 100%;
+    width: 390px;
     /* background-image: linear-gradient(to top, #a18cd1 50%, #fbc2eb 100%); */
     background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
 }
