--- a/PayBokApp/src/app/components/footer/footer.component.html
+++ b/PayBokApp/src/app/components/footer/footer.component.html
@@ -1,1 +1,7 @@
-<p>footer works!</p>
+<div class="box">
+    <div class="nfc">
+        <img src="../../../assets/nfc.png" alt="nfc">
+    </div>
+    <div class="footer">
+    </div>
+</div>
